style.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: "Noto Sans", sans-serif;
}

h1 {
  font-size: 4em;
line-height: 0;
}

h1,
h2,
h3 {
  font-family: "Noto Serif", serif;
}

section {
  min-height: 100vh;
}

#first {
  background-color: #000000;
  color: white;
  display: flex;
  justify-content: center;
  /* align-items: center; */
  flex-direction: column;
}

#second {
  background: #eee9d6;
  display: flex;
  flex-direction: column;
}

#third {
  background: black;
}

.content {
  padding: 40px;
}

.flower {
  /* background-color: yellow; */
  width: 100%;
  position: absolute;
  bottom: 0;
  transform: translateY(50%);
}

.flower img {
  width:100%;
}

.card {
  background: #f1f0e7;
  padding: 20px;
  border-radius: 10px;
  margin: 10px;
  display: flex;
  position: relative;
  flex-direction: column;
}

.card img {
  max-height: 100px;
}

.btn {
  padding: 10px 20px;
  background-color: white;
  color: black;
  border: 1px solid rgb(218, 218, 218);
  text-decoration: none;
  box-shadow: 0 0 5px rgb(221, 221, 221);
}

.btn-link {
  padding: 10px 20px;
  color:white;
  text-decoration: none;
}

.space1 {
  height: 100px;
}

.sub-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.sub {
  background: #f1f0e7;
  flex-direction: column;
  display: flex;
  margin: 20px;
  padding: 20px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

.sub-img {
  width: 100px;
  height: 100px;
  border-radius: 100%;
  align-self: center;
}

.sub .btn {
  align-self: center;
  flex: 0 0 auto;
  margin-top:auto;
  padding: 10px 20px;
}

@media (min-width: 992px) {
  .card {
    max-width: calc(100vw / 2);
    flex-direction: row;
    margin: 50px 50px;
  }

  .card img {
    max-height: none;
  }

  .c2 {
    margin-left: 20vw;
  }

  .c3 {
    max-width: 65vw;
  }

  .p1 {
    width: 150px;
    position: relative;
    margin-right: -60px;
    margin-bottom: -60px;
  }

  .p2 {
    width: 150px;
    position: relative;
    transform: translateX(-50%);
    margin-left: -50px;
  }

  .sub {
    margin-top: -50px;
    flex: 1 1;
  }
}

